[package]
license = "MIT"
name = "redeez"
edition = "2021"
version = "0.1.0"
readme = "README.md"
keywords = ["redis", "queue", "async"]
categories = ["database", "asynchronous"]
description = "A simple queueing system for Redis"
repository = "https://github.com/m1guelpf/redeez-rs"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]

[dependencies]
redis = "0.22.2"
anyhow = "1.0.68"
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["rt", "signal", "time", "sync"] }

[dev-dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
