[package]
license = "MIT"
name = "redeez"
edition = "2021"
version = "0.1.2"
readme = "README.md"
keywords = ["redis", "queue", "async"]
categories = ["database", "asynchronous"]
description = "A simple queueing system for Redis"
repository = "https://github.com/m1guelpf/redeez-rs"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]

[dependencies]
redis = "0.25.3"
thiserror = "1.0"
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24", features = ["rt", "signal", "time", "sync"] }

[dev-dependencies]
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
